# xlsxzero

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: clippy.yml  deploy-wasm.yml  fmt.yml  test.yml
benches/: benchmark.rs
docs/: architecture.md  detailed_design.md  interface.md  requirements.md  test_specification.md
examples/: basic_conversion.rs  cli_tool.rs  custom_config.rs  generate_bench_fixtures.rs  spike_calamine.rs
examples/wasm/: .gitignore  Cargo.toml  README.md  deploy.sh  index.html  index.js  netlify.toml  vercel.json
examples/wasm/src/: lib.rs
src/: api.rs  builder.rs  error.rs  formatter.rs  grid.rs  lib.rs  security.rs  types.rs
src/format/: mod.rs  parser.rs  sections.rs  tokens.rs
src/output/: formatters.rs  mod.rs
src/parser/: metadata.rs  mod.rs  workbook.rs
tests/: boundary_test.rs  integration_test.rs  performance_test.rs  security_test.rs
tests/fixtures/: generate_bench_fixtures.rs
