[package]
name = "xlsxzero"
version = "0.1.0"
edition = "2021"
authors = ["Shion Watanabe"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/siska-tech/xlsxzero"
description = "Pure-Rust Excel parser and Markdown converter for RAG systems"
readme = "README.md"
keywords = ["excel", "xlsx", "markdown", "parser", "rag"]
categories = ["parsing", "text-processing", "data-structures"]

[dependencies]
calamine = "^0.26"
thiserror = "^1.0"
chrono = "^0.4"
quick-xml = "^0.31"
zip = { version = "^0.6", default-features = false, features = ["deflate"] }
rayon = "^1.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
unicode-width = "^0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "^0.2", optional = true }

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen"]

[dev-dependencies]
rust_xlsxwriter = "0.80"
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

[[bench]]
name = "benchmark"
harness = false
