[package]
name = "xlsxzero-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
xlsxzero = { path = "../..", features = ["wasm"] }
wasm-bindgen = "^0.2"
js-sys = "^0.3"
web-sys = { version = "^0.3", features = ["File", "FileReader", "Event", "EventTarget", "Window", "Document", "Element", "HtmlInputElement", "HtmlTextAreaElement", "HtmlButtonElement", "Blob"] }

[dependencies.console_error_panic_hook]
version = "^0.1"
optional = true

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

